Implement: - Repositories tests - Repository search check for null value